@@ -240,6 +240,7 @@ static int php_tidy_output_handler(void **nothing, php_output_context *output_co
 static PHP_MINIT_FUNCTION(tidy);
 static PHP_MSHUTDOWN_FUNCTION(tidy);
 static PHP_RINIT_FUNCTION(tidy);
+static PHP_RSHUTDOWN_FUNCTION(tidy);
 static PHP_MINFO_FUNCTION(tidy);
 
 static PHP_FUNCTION(tidy_getopt);
@@ -500,7 +501,7 @@ zend_module_entry tidy_module_entry = {
 	PHP_MINIT(tidy),
 	PHP_MSHUTDOWN(tidy),
 	PHP_RINIT(tidy),
-	NULL,
+	PHP_RSHUTDOWN(tidy),
 	PHP_MINFO(tidy),
 	PHP_TIDY_VERSION,
 	PHP_MODULE_GLOBALS(tidy),
@@ -1102,6 +1103,13 @@ static PHP_RINIT_FUNCTION(tidy)
 #endif
 
 	php_tidy_clean_output_start(ZEND_STRL("ob_tidyhandler"));
+
+	return SUCCESS;
+}
+
+static PHP_RSHUTDOWN_FUNCTION(tidy)
+{
+	TG(clean_output) = INI_ORIG_BOOL("tidy.clean_output");
 
 	return SUCCESS;
 }
