@@ -9,6 +9,9 @@ PHP                                                                        NEWS
     (cmb)
   . Fixed bug #72964 (White space not unfolded for CC/Bcc headers). (cmb)
 
+- Tidy:
+  . Fixed bug #77594 (ob_tidyhandler is never reset). (cmb)
+
 26 Nov 2020, PHP 7.4.13
 
 - Core:
